# multe

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
documentation/: cite.bib  multichoice.md
examples/: basic_example.py  benchmark.py  csv_example.py  matrix_example.py  quickstart.py  simple_fit_example.py
multe/: __init__.py  model.py  simulate.py
tests/: __init__.py  conftest.py  test_benchmark.py  test_difficult_integration.py  test_edge_cases.py  test_model.py  test_simulate.py
