[project]
name = "multe"
version = "0.1.0"
description = "Multichoice Logit Estimation: A library for discrete choice models with single and paired alternatives"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Thomas Monk", email = "t.d.monk@lse.ac.uk"}
]
keywords = ["discrete choice", "logit", "econometrics", "mle", "estimation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pandas>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/tmonk/multe"
Repository = "https://github.com/tmonk/multe"
Documentation = "https://github.com/tmonk/multe#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["multe"]

[tool.hatch.build.targets.sdist]
exclude = [
    "documentation/",
    "benchmarking/",
    ".github/",
    "tests/",
]
