[project]
name = "multe"
description = "Multichoice Logit Estimation: A library for discrete choice models with single and paired alternatives"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Thomas Monk", email = "t.d.monk@lse.ac.uk"}
]
keywords = ["discrete choice", "logit", "econometrics", "mle", "estimation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pandas>=1.3.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/tmonk/multe"
Repository = "https://github.com/tmonk/multe"
Documentation = "https://github.com/tmonk/multe#readme"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["multe"]

[tool.hatch.build.targets.sdist]
exclude = [
    "documentation/",
    "benchmarking/",
    ".github/",
    "tests/",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["scipy.*", "pandas.*"]
ignore_missing_imports = true